--- a/beszel/site/src/locales/zh/zh.po
+++ b/beszel/site/src/locales/zh/zh.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: zh\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-06 07:27\n"
+"PO-Revision-Date: 2025-07-25 22:44\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Traditional\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
@@ -274,13 +274,13 @@ msgstr "已複製到剪貼簿"
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgctxt "Button to copy docker compose file content"
 msgid "Copy docker compose"
-msgstr "复制 docker compose"
+msgstr "複製 docker compose"
 
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgctxt "Button to copy docker run command"
 msgid "Copy docker run"
-msgstr "复制 docker run"
+msgstr "複製 docker run"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgctxt "Environment variables"
@@ -398,7 +398,7 @@ msgstr "文件"
 #: src/components/systems-table/systems-table.tsx
 #: src/components/routes/system.tsx
 msgid "Down"
-msgstr "中斷"
+msgstr "離線"
 
 #: src/components/alerts-history-columns.tsx
 msgid "Duration"
@@ -514,7 +514,7 @@ msgstr "網格"
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgctxt "Button to copy install command"
 msgid "Homebrew command"
-msgstr "Homebrew 命令"
+msgstr "Homebrew 指令"
 
 #: src/components/add-system.tsx
 msgid "Host / IP"
@@ -715,7 +715,7 @@ msgstr "暫停"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Paused"
-msgstr "已暂停"
+msgstr "已暫停"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
@@ -794,7 +794,7 @@ msgstr "繼續"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Rotate token"
-msgstr "輪換令牌"
+msgstr "輪替令牌"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Rows per page"
@@ -970,11 +970,11 @@ msgstr "令牌和指紋"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens allow agents to connect and register. Fingerprints are stable identifiers unique to each system, set on first connection."
-msgstr "令牌允許代理程式連接和註冊。指紋是每個系統唯一的穩定識別符，在首次連接時設置。"
+msgstr "令牌允許代理程式連線和註冊。指紋是每個系統的唯一穩定識別符，在首次連線時產生。"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens and fingerprints are used to authenticate WebSocket connections to the hub."
-msgstr "令牌和指紋用於驗證到中心的WebSocket連接。"
+msgstr "令牌和指紋被用於驗證到 Hub 的 WebSocket 連線。"
 
 #: src/lib/utils.ts
 msgid "Triggers when 1 minute load average exceeds a threshold"
@@ -1078,7 +1078,7 @@ msgstr "等待足夠的記錄以顯示"
 
 #: src/components/routes/settings/general.tsx
 msgid "Want to help improve our translations? Check <0>Crowdin</0> for details."
-msgstr "想幫助我們改善翻譯嗎？查看<0>Crowdin</0>以取得更多詳細信息。"
+msgstr "想幫助我們改善翻譯嗎？查看<0>Crowdin</0>以取得更多詳細資訊。"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Webhook / Push notifications"
@@ -1086,13 +1086,13 @@ msgstr "Webhook / 推送通知"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "When enabled, this token allows agents to self-register without prior system creation. Expires after one hour or on hub restart."
-msgstr "啟用時，此令牌允許代理程式在無需預先創建系統的情況下自動註冊。在一小時後或中心重啟時過期。"
+msgstr "啟用時，此令牌允許代理程式在沒有預先建立系統的情況下自動註冊。在一小時後或 Hub 重啟時過期。"
 
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgctxt "Button to copy install command"
 msgid "Windows command"
-msgstr "Windows 命令"
+msgstr "Windows 指令"
 
 #. Disk write
 #: src/components/routes/system.tsx
